implement page flip concept

--- a/example/index.html
+++ b/example/index.html
@@ -12,8 +12,7 @@
     </style>
   </head>
   <body>
-    <mihiraki-viewer layout="rtol" src="./page%d.png"
-                     first-page="0" last-page="4" current-page="0">
+    <mihiraki-viewer src="./page%d.png" totalPages="5">
     </mihiraki-viewer>
   </body>
 </html>
