implement toc support

--- a/example/toc.html
+++ b/example/toc.html
@@ -12,7 +12,6 @@
     </style>
   </head>
   <body>
-    <mihiraki-viewer src="./page%d.png" total-pages="5">
-    </mihiraki-viewer>
+    <mihiraki-viewer toc="./toc.json"></mihiraki-viewer>
   </body>
 </html>
